--- a/css/variables.css
+++ b/css/variables.css
@@ -10,14 +10,14 @@
     --primary-hover-dark: hsl(212, 100%, 45%);
     --primary-outline-dark: hsl(212, 100%, 46%);
     --primary-outline-hover-dark: hsl(212, 100%, 55%);
-    --surface-dark: hsl(222, 41%, 17%);
+    --surface-dark: hsl(210, 15%, 11%);
     --on-surface-dark: hsl(223, 23%, 61%);
     --on-surface-2-dark: hsl(222, 16%, 72%);
-    --surface-variant-dark: hsl(223, 40%, 20%);
-    --surface-variant-hover-dark: hsl(223, 40%, 24%);
+    --surface-variant-dark: #2c323a;
+    --surface-variant-hover-dark: hsl(216, 61%, 49%);
     --on-surface-variant-dark: hsl(223, 13%, 54%);
-    --surface-variant-outline-dark: hsl(222, 41%, 23%);
-    --surface-variant-outline-hover-dark: hsl(220, 40%, 40%);
+    --surface-variant-outline-dark: hsl(214, 13%, 20%);
+    --surface-variant-outline-hover-dark: hsl(216, 61%, 49%);
     --error-dark: hsl(0, 100%, 71%);
     --error-alpha-10-dark: hsla(0, 100%, 71%, 0.1);
     --outline-dark: hsl(223, 40%, 20%);
@@ -43,10 +43,10 @@
     --surface-light: hsl(223, 100%, 96%);
     --on-surface-light: hsl(222, 11%, 40%);
     --on-surface-2-light: hsl(222, 11%, 36%);
-    --surface-variant-light: hsl(221, 26%, 89%);
+    --surface-variant-light: hsl(213, 13%, 16%);
     --surface-variant-hover-light: hsl(221, 26%, 79%);
     --on-surface-variant-light: hsl(223, 14%, 35%);
-    --surface-variant-outline-light: hsl(223, 18%, 85%);
+    --surface-variant-outline-light: hsl(213, 13%, 16%);
     --surface-variant-outline-hover-light: hsl(223, 18%, 75%);
     --error-light: hsl(0, 54%, 49%);
     --error-alpha-10-light: hsla(0, 54%, 49%, 0.1);
