--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@
 
 body {
     color: var(--on-background);
-    height: 300vh;
     display: flex;
     font-size: var(--label-1);
     background: var(--background);
@@ -181,6 +180,18 @@ body {
     color: var(--on-background);
 }
 
+.search-box .leading-icon,
+.search-box .label-1 {
+    display: none;
+}
+
+.search-box {
+    position: relative;
+    overflow: hidden;
+    flex-grow: 1;
+    border-radius: var(--radius-pill);
+}
+
 .header {
     top: 0;
     left: 0;
@@ -191,6 +202,7 @@ body {
     position: fixed;
     transition: background-color var(--transition-short);
     align-items: center;
+    background-color: var(--background);
 }
 
 .header.active {
@@ -203,14 +215,6 @@ body {
     align-items: center;
 }
 
-.search-box .leading-icon
-.search-btn, .label-1 {
-    position: relative;
-    overflow: hidden;
-    flex-grow: 1;
-    border-radius: var(--radius-pill);
-}
-
 .search-field {
     height: 48px;
     outline: none;
@@ -218,4 +222,52 @@ body {
     border-radius: inherit;
     padding-inline: 16px 64px;
     background-color: var(--surface-variant);
+}
+
+.search-field:focus {
+    box-shadow: inset 0 0 0 2px var(--primary);
+}
+
+.search-field::placeholder {
+    color: var(--alpha-60);
+}
+
+.search-btn {
+    top: 0;
+    right: 0;
+    width: 48px;
+    color: var(--white);
+    bottom: 0;
+    display: grid;
+    position: absolute;
+    transition: var(--transition-short);
+    place-items: center;
+    font-weight: var(--weight-medium);
+    border-radius: var(--radius-pill);
+    background-color: var(--primary);
+}
+
+.search-btn:where(:hover, :focus-visible):not(:active) {
+    background-color: var(--primary-hover);
+}
+
+.header-search {
+    gap: 8px;
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.header:not(.search-active) .header-search {
+    margin-inline-start: auto;
+}
+
+.header:not(.search-active) .search-box,
+.header.search-active :where(.logo, .theme-btn),
+.search-toggler[aria-expanded='true'] .search-icon,
+.search-toggler[aria-expanded='false'] .close-icon,
+[data-theme='dark'] .theme-btn .moon-icon,
+[data-theme='light'] .theme-btn .sun-icon {
+    display: none;
 }
