--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
 
 body {
     color: var(--on-background);
+    height: 300vh;
     display: flex;
     font-size: var(--label-1);
     background: var(--background);
