--- a/style.css
+++ b/style.css
@@ -158,6 +158,14 @@ body {
     ;
 }
 
+.text-primary {
+    color: #7d8590;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 24px;
+    font-weight: 300;
+}
+
 .icon-btn {
     width: 48px;
     height: 48px;
